# MemSense

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  ruff.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: lint.yml  release-integration.yml  release.yml  test.yml
docs/: DEVELOPMENT_WORKFLOW.md  PACKAGES.md
helm/hindsight/: Chart.yaml  values.yaml
hindsight-all/: pyproject.toml
hindsight-all-npm/: README.md  package.json  tsup.config.ts
hindsight-all-npm/src/: command.test.ts  command.ts  index.ts  server.test.ts  server.ts  types.ts
hindsight-all-slim/: pyproject.toml
hindsight-all/hindsight/: embedded.py
hindsight-api/: pyproject.toml
hindsight-api-slim/: pyproject.toml
hindsight-api-slim/hindsight_api/: __init__.py  config.py  config_resolver.py  mcp_tools.py  metrics.py
hindsight-api-slim/tests/: test_async_retain_tags.py  test_bank_stats.py  test_bank_template_configurable_fields.py  test_bank_templates.py  test_chunk_storage_upsert.py  test_cohere_cross_encoder.py  test_combined_scoring.py  test_consolidation.py  test_consolidation_retry_budget.py  test_consolidation_round_limit.py  test_custom_embedding_dimension.py  test_erasure_endpoint.py  test_fact_extraction_retry.py  test_file_retain.py  test_gemini_embeddings.py  test_google_cross_encoder.py  test_graph_entity_fanout_cap.py  test_hierarchical_config.py  test_http_api_integration.py  test_integrity_violation_not_retried.py  test_link_utils.py  test_litellm_sdk_embeddings.py  test_load_large_batch.py  test_mcp_string_coercion.py  test_mcp_tools.py  test_mental_models.py  test_metrics.py  test_post_extraction.py  test_query_analyzer.py  test_recall_cache.py  test_recall_config.py  test_reflect_agent.py  test_reflect_internal_billing.py  test_reflect_source_facts_config.py  test_reranking_proof_count.py  test_retain.py  test_retain_orchestrator_mapping.py  test_structured_doc.py  test_token_accounting.py  test_usage_endpoint.py  (+1 more)
hindsight-api/hindsight_api/: config.py  main.py
hindsight-api/hindsight_api/engine/: entity_resolver.py  llm_wrapper.py  memory_engine.py
hindsight-api/hindsight_api/engine/consolidation/: consolidator.py  prompts.py
hindsight-api/hindsight_api/engine/providers/: claude_code_llm.py
hindsight-api/hindsight_api/engine/reflect/: agent.py  prompts.py
hindsight-api/hindsight_api/engine/retain/: fact_extraction.py
hindsight-api/hindsight_api/worker/: poller.py
hindsight-api/tests/: test_consolidation.py  test_llm_provider.py  test_reflect_agent.py  test_worker.py
hindsight-cli/: .openapi-coverage.toml  Cargo.toml
hindsight-cli/src/: api.rs  main.rs
hindsight-clients/go/: api_audit.go  api_bank_templates.go  api_banks.go  api_directives.go  api_documents.go  api_entities.go  api_files.go  api_memory.go  api_mental_models.go  api_monitoring.go  api_operations.go  api_webhooks.go  client.go  configuration.go  model_add_background_request.go  model_async_operation_submit_response.go  model_audit_log_entry.go  model_audit_log_list_response.go  model_audit_log_stats_bucket.go  model_audit_log_stats_response.go  model_background_response.go  model_bank_config_response.go  model_bank_config_update.go  model_bank_list_item.go  model_bank_list_response.go  model_bank_profile_response.go  model_bank_stats_response.go  model_bank_template_config.go  model_bank_template_directive.go  model_bank_template_import_response.go  model_budget.go  (+96 more)
hindsight-control-plane/: package.json
hindsight-dev/: pyproject.toml
hindsight-docs/: docusaurus.config.ts  package.json  sidebars.ts
hindsight-embed/: pyproject.toml
hindsight-integrations/autogen/: pyproject.toml
hindsight-integrations/autogen/hindsight_autogen/: _client.py
scripts/: check-integration-lockfiles.sh  check-integration-releases.sh  generate-clients.sh  release-integration.sh  release.sh  sync-upstream.sh
(+432 files in other folders)
