[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "memsense-all-slim"
version = "0.5.4"
description = "Hindsight: Agent Memory That Works Like Human Memory - Slim All-in-One Bundle"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "memsense-api-slim>=0.4.17",
    "memsense-client>=0.0.7",
    "memsense-embed>=0.1.0",
]

[tool.uv.sources]
memsense-api-slim = { workspace = true }
memsense-client = { workspace = true }
memsense-embed = { workspace = true }

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
