[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memsense-all"
version = "0.5.4"
description = "Hindsight: Agent Memory That Works Like Human Memory - All-in-One Bundle"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "memsense-api-slim[all]>=0.4.17",
    "memsense-client>=0.0.7",
    "memsense-embed>=0.1.0",
]

[tool.uv.sources]
memsense-api-slim = { workspace = true }
memsense-client = { workspace = true }
memsense-embed = { workspace = true }

[project.optional-dependencies]
local-llm = [
    "memsense-api-slim[local-llm]>=0.4.17",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hindsight"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
